# herald

./: .gitignore  AGENTS.md  ARCHITECTURE.md  AUDIT.md  AUTH.md  CHANGELOG.md  CHAT.md  CHAT_IMPL.md  CLAUDE.md  Cargo.toml  DESIGN-CLUSTERING.md  DOCS.md  Dockerfile  ISSUES.md  LICENSE  README.md  ROADMAP.md  docker-bake.hcl  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  herald.toml.example  openapi.json  openapi.yaml
.cargo/: config.toml
codegen/: config.ts  generate.ts  ir.ts  package-lock.json  package.json  parser.ts  tsconfig.json
config/: herald-test.toml  moat.toml
contract-tests/: README.md  harness.ts  package-lock.json  package.json  run-all.ts  run-typescript.ts  tsconfig.json  validate.ts
docs/: at-least-once-delivery.md
herald-admin-csharp/: HeraldAdmin.cs  HeraldAdmin.csproj  HeraldException.cs  HttpTransport.cs  Types.cs
herald-admin-go/: README.md  client.go  e2ee.go  e2ee_test.go  errors.go  go.mod  transport.go  types.go
herald-admin-php/: autoload.php  composer.json
herald-admin-python/: README.md  pyproject.toml
herald-admin-ruby/: README.md  herald-admin.gemspec
herald-admin-typescript/: README.md  package-lock.json  package.json
herald-admin-ui/: Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  server.js  tsconfig.tsbuildinfo  vite.config.ts
herald-chat-core/: README.md  package-lock.json  package.json
herald-chat-demo/: index.html  package-lock.json  package.json
herald-chat-react/: README.md  package-lock.json  package.json  tsconfig.json
herald-chat-sdk-typescript/: README.md  package-lock.json  package.json
herald-core/: Cargo.toml
herald-presence-sdk-typescript/: README.md  package-lock.json  package.json  tsconfig.json
herald-sdk-typescript/: .gitignore  .npmignore  README.md  package-lock.json  package.json
herald-sdk-typescript/wasm/: Cargo.toml  build.sh
herald-sdk-typescript/wasm/src/: cipher.rs  keys.rs  lib.rs  veil.rs
herald-server/: Cargo.toml
herald-server/src/: admin_events.rs  backplane.rs  config.rs  engine.rs  latency.rs  lib.rs  main.rs  metering.rs  signup.rs  state.rs  store_backend.rs  webhook.rs
herald-server/src/chat/: http_blocks.rs  http_events_ext.rs  http_presence.rs  mod.rs  store_blocks.rs  store_cursors.rs  store_reactions.rs  ws_handler.rs
herald-server/src/engines/: mod.rs
herald-server/src/engines/chat/: http_blocks.rs  http_events.rs  mod.rs  ws_handler.rs
herald-server/src/engines/presence/: http.rs  mod.rs  ws_handler.rs
herald-server/src/http/: admin.rs  blocks.rs  events.rs  health.rs  members.rs  messages.rs  mod.rs  openapi.rs  presence.rs  rooms.rs  self_service.rs  streams.rs  validation.rs
herald-server/src/integrations/: chronicle.rs  cipher.rs  circuit_breaker.rs  courier.rs  embedded_cipher.rs  embedded_sentry.rs  embedded_veil.rs  in_process_chronicle.rs  in_process_courier.rs  in_process_sentry.rs  mod.rs  resilient.rs  sentry.rs  veil.rs
herald-server/src/registry/: connection.rs  mod.rs  presence.rs  room.rs  stream.rs  typing.rs
herald-server/src/store/: blocks.rs  cursors.rs  events.rs  last_seen.rs  members.rs  messages.rs  mod.rs  presence_overrides.rs  purge.rs  reactions.rs  rooms.rs  sequences.rs  streams.rs  tenants.rs
herald-server/src/ws/: connection.rs  fanout.rs  handler.rs  mod.rs  upgrade.rs
herald-server/tests/: bench_latency.rs  integration.rs
(+173 files in other folders)
