[workspace]
resolver = "2"
default-members = ["herald-server"]
members = [
    "herald-core",
    "herald-server",
]

[workspace.package]
version = "2.0.0"
edition = "2021"
rust-version = "1.92"

[workspace.dependencies]
herald-core = { path = "herald-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
