[package]
name = "herald-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "herald"
path = "src/main.rs"

[dependencies]
herald-core.workspace = true
serde.workspace = true
serde_json.workspace = true

tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower-http = { version = "0.6", features = ["cors"] }
shroudb-store = { version = "0.1", registry = "shroudb" }
shroudb-storage = { version = "0.2", registry = "shroudb" }
shroudb-client = { version = "1", registry = "shroudb" }
dashmap = "6"
parking_lot = "0.12"
jsonwebtoken = "9"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
opentelemetry = { version = "0.29", optional = true }
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.29", features = ["grpc-tonic"], optional = true }
tracing-opentelemetry = { version = "0.30", optional = true }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
hmac = "0.12"
sha2 = "0.10"
subtle = "2"
hex = "0.4"
async-stream = "0.3"
async-trait = "0.1"
base64 = "0.22"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls-pemfile = "2"

shroudb-sentry-client = { version = "1", registry = "shroudb" }
shroudb-sentry-engine = { version = "1", registry = "shroudb" }
shroudb-acl = { version = "0.1", registry = "shroudb" }
shroudb-courier-client = { version = "1", registry = "shroudb" }
shroudb-keep-client = { version = "1", registry = "shroudb" }
shroudb-chronicle-client = { version = "1", registry = "shroudb" }
shroudb-chronicle-core = { version = "1", registry = "shroudb" }

[features]
default = ["chat"]
chat = []
otel = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "tracing-opentelemetry"]

[dev-dependencies]
tokio-tungstenite = "0.28"
tempfile = "3"
