[package]
name = "herald-e2ee-wasm"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "LicenseRef-Proprietary"
publish = false

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
ring = { version = "0.17", features = ["wasm32_unknown_unknown_js"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
zeroize = { version = "1", features = ["derive"] }

shroudb-cipher-blind = { version = "1.4.14", registry = "shroudb", default-features = false, features = ["wasm"] }
shroudb-veil-blind = { version = "1.7.1", registry = "shroudb", default-features = false, features = ["wasm"] }

[profile.release]
opt-level = "s"
lto = true
